; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_tc.os.c_xstrerror.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_tc.os.c_xstrerror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sys_nerr = common dso_local global i32 0, align 4
@sys_errlist = common dso_local global i8** null, align 8
@xstrerror.errbuf = internal global i8* null, align 8
@.str = private unnamed_addr constant [18 x i8] c"Unknown Error: %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @xstrerror(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp sge i32 %4, 0
  br i1 %5, label %6, label %16

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @sys_nerr, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %16

10:                                               ; preds = %6
  %11 = load i8**, i8*** @sys_errlist, align 8
  %12 = load i32, i32* %3, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i8*, i8** %11, i64 %13
  %15 = load i8*, i8** %14, align 8
  store i8* %15, i8** %2, align 8
  br label %23

16:                                               ; preds = %6, %1
  %17 = load i8*, i8** @xstrerror.errbuf, align 8
  %18 = call i32 @xfree(i8* %17)
  %19 = call i32 @CGETS(i32 23, i32 13, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %20 = load i32, i32* %3, align 4
  %21 = call i8* @xasprintf(i32 %19, i32 %20)
  store i8* %21, i8** @xstrerror.errbuf, align 8
  %22 = load i8*, i8** @xstrerror.errbuf, align 8
  store i8* %22, i8** %2, align 8
  br label %23

23:                                               ; preds = %16, %10
  %24 = load i8*, i8** %2, align 8
  ret i8* %24
}

declare dso_local i32 @xfree(i8*) #1

declare dso_local i8* @xasprintf(i32, i32) #1

declare dso_local i32 @CGETS(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
